--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+absl-py==0.13.0
 anyio==3.2.1
 argon2-cffi==20.1.0
+astunparse==1.6.3
 async-generator==1.10
 attrs==21.2.0
 autopep8==1.5.7
@@ -7,9 +9,11 @@ Babel==2.9.1
 backcall==0.2.0
 backports.entry-points-selectable==1.1.0
 bleach==3.3.1
+cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.3
+click==8.0.1
 colorama==0.4.4
 cycler==0.10.0
 debugpy==1.3.0
@@ -18,6 +22,13 @@ defusedxml==0.7.1
 distlib==0.3.2
 entrypoints==0.3
 filelock==3.0.12
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.33.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.34.1
+h5py==3.1.0
 idna==3.2
 ipykernel==6.0.1
 ipython==7.25.0
@@ -37,7 +48,11 @@ jupyterlab==3.0.16
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.6.1
 jupyterlab-widgets==1.0.0
+Keras==2.4.3
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
+Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
@@ -47,8 +62,11 @@ nbclient==0.5.3
 nbconvert==6.1.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
+nltk==3.6.2
 notebook==6.4.0
-numpy==1.21.0
+numpy==1.19.5
+oauthlib==3.1.1
+opt-einsum==3.3.0
 packaging==21.0
 pandas==1.3.0
 pandocfilters==1.4.3
@@ -58,6 +76,9 @@ Pillow==8.3.1
 platformdirs==2.0.2
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.7.0
 pycparser==2.20
 Pygments==2.9.0
@@ -67,25 +88,39 @@ python-dateutil==2.8.2
 pytz==2021.1
 pywin32==301
 pywinpty==1.1.3
+PyYAML==5.4.1
 pyzmq==22.1.0
 qtconsole==5.1.1
 QtPy==1.9.0
+regex==2021.7.6
 requests==2.26.0
+requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
+rsa==4.7.2
 scikit-learn==0.24.2
 scipy==1.7.0
 Send2Trash==1.7.1
-six==1.16.0
+six==1.15.0
 sniffio==1.2.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
 terminado==0.10.1
 testpath==0.5.0
 threadpoolctl==2.2.0
 toml==0.10.2
 tornado==6.1
+tqdm==4.61.2
 traitlets==5.0.5
+typing-extensions==3.7.4.3
 urllib3==1.26.6
 virtualenv==20.6.0
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.1.0
+Werkzeug==2.0.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
